# furuta

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  furuta.ini  furuta_params.py  pyproject.toml  requirements.txt  robot_inference.py  sac_train.py  sim.ini  sim_params.py  td3_train.py  td3_train_real.py  train.py
.github/workflows/: ci.yml  lint.yml
arduino/: arduino.ino
furuta/: __init__.py  logger.py  plotter.py  robot.py  sim.py  state.py  utils.py  viewer.py
furuta-gym/: setup.py
furuta-gym/furuta_gym/: __init__.py  common.py  wrappers.py
furuta-gym/furuta_gym/envs/: __init__.py  common.py  furuta_base.py  furuta_env.py  furuta_real.py  furuta_sim.py  wrappers.py
furuta/controls/: controllers.py  filters.py  utils.py
furuta/logging/protobuf/: pendulum_state.proto  pendulum_state_pb2.py
furuta/rl/: algos.py  utils.py  wrappers.py
furuta/rl/envs/: furuta_base.py  furuta_real.py  furuta_sim.py
furuta_gym/: robot.py  utils.py  wrappers.py
furuta_gym/envs/: __init__.py  furuta_base.py  furuta_real.py  furuta_sim.py
furuta_gym/envs/hardware/: LS7366R.py
furuta_gym/logging/protobuf/: pendulum_state_pb2.py
hardware/: README.md
hardware/CAD/f360/: arm.f3d  motor_mount.f3d  shaft_collar.f3d  slip_ring_mount.f3d  weight.f3d
hardware/CAD/step/: arm.step  electronics_support_jetson.step  motor_mount.step  shaft_collar.step  slip_ring_mount.step  weight.step
hardware/CAD/stl/: 25d_motor_mount.stl  arm.stl  electronics_support_jetson.stl  motor_mount.stl  shaft_collar.stl  slip_ring_mount.stl  weight.stl
logs/sim/: state.npy  times.npy  traj.npy
notebooks/: 2022_11_25_system_id.ipynb  2022_11_26_mcap.ipynb  2022_11_30_debug_sim_init_state.ipynb  2023_01_29_debug_gsde.ipynb  2023_11_12_pid.ipynb
robot/firmware/: firmware.ino
robot/hardware/: README.md  furuta.urdf
robot/hardware/URDF/: config.json  robot.urdf
robot/hardware/clamp_assembly/: m12_bolt_cap.stl  spacer.stl
robot/hardware/furuta/: robot.urdf
robot/hardware/v1/: pendulum_joint.stl  shaft_collar.stl
robot/hardware/v2/: config.json  robot.urdf
scripts/: control.py  control_motor.py  control_motor_pos_vel.py  nmpc_crocoddyl.py  nmpc_crocoddyl_sol.py  nmpc_swing_up.py  pid.py  real_nmpc_swing_up.py  replay_log.py  replay_mcap.py  rl_inference.py  robot_inference.py  rollout.py  sim.py  simple_control.py  train.py  train_sac.py  urdf_viz.py
scripts/configs/: parameters.json  rl_inference.yaml  train.yaml
scripts/configs/algo/: ppo.yaml  sac.yaml  (+3 more)
software/: README.md
tests/: interactive_robot_selftest.py  test_gym_env.py
(+52 files in other folders)
