[tool.poetry]
name = "furuta-gym"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "furuta_gym"}]

[tool.poetry.dependencies]
python = "^3.8"
gymnasium = "^0.29.1"
pyserial = "^3.5"
simple-pid = "^2.0.0"
ipykernel = "^6.26.0"
matplotlib = "3.7.3"
pre-commit = "^3.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
