[project]
name = "furuta"
version = "0.1.0"
description = ""
authors = [{name="Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "gymnasium>=0.29.1",
    "pyserial>=3.5",
    "simple-pid>=2.0.0",
    "mcap-protobuf-support>=0.4.1",
    "scipy>=1.11.4",
    "pygame>=2.5.2",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.26.0",
    "matplotlib==3.7.3",
    "pre-commit>=3.5.0",
    "stable-baselines3>=2.2.1",
    "wandb>=0.16.2",
    "opencv-python>=4.9.0.80",
    "hydra-core>=1.3.2",
    "tensorboard>=2.15.1",
    "moviepy>=1.0.3",
    "sbx-rl>=0.10.0",
    "jax-metal>=0.0.5; sys_platform == 'darwin'",
    "sb3-contrib",
    "pytest>=7.4.4",
    "pin>=2.7.0",
    "crocoddyl>=2.0.2",
    "cmeel-mim-solvers>=0.0.4",
    "onshape-to-robot>=0.3.26",
    "meshcat",
]

[tool.uv.sources]
sb3-contrib = { git = "https://github.com/Stable-Baselines-Team/stable-baselines3-contrib"}
meshcat = { git = "https://github.com/meshcat-dev/meshcat-python" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
